# t-match-backend

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  alembic.ini  argocd-default-project.yaml  docker-compose.local.yaml  docker-compose.yaml  main.py  pyproject.toml  readme.md  requirements.txt  settings.py
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 1bb6020d53f3_add_timezone_to_ends_at.py  3bd5cedc587c_add_friends_accept.py  43616409ade4_drop_created_by.py  6b1658877bab_fix_friends_bug.py  819a328f503b_drop_created_by.py  8d249fc9f3c6_fix_friends_bug.py  9127d8033a1e_accept_may_be_null.py  a44620ba10d5_add_friends.py  a5b51cfde23f_add_refresh_token.py  ebdb2d8ad259_init.py  f6a0e0de222a_bug_fix.py  f99029af2566_drop_create_at.py
app/api/v1/: auth.py  connect.py  friend.py  meet.py  prof.py  profile.py  test.py  user.py
app/db/: models.py  session.py
app/repository/: auth.py  friend.py  meet.py  prof.py  profile.py  user.py
app/schemas/: auth.py  connect.py  friend.py  meet.py  profile.py  user.py
app/services/: auth.py  friend.py  meet.py  prof.py  profile.py  user.py
app/validators/: password.py  time.py
helm/: argocd-app.yaml  argocd-image-updater-cr.yaml
helm/backend/: Chart.yaml  NOTES.txt  values.yaml
helm/backend/templates/: _helpers.tpl  cluster-issuer.yaml  deployment.yaml  ingress.yaml
k8s/: cluster-issuer.yaml  deployment.yaml  ingress.yaml  secrets.yaml.example  service.yaml
tests/: conftest.py  test_friend.py  test_meet.py  test_profile.py
