[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "bcrypt>=5.0.0",
    "cryptography>=49.0.0",
    "fastapi>=0.139.2",
    "fastapi-jwt>=0.3.0",
    "httpx>=0.28.1",
    "jwt>=1.4.0",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "tzdata>=2026.3",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
